@@ -15,4 +15,10 @@
 $Id$
 """
 
+import warnings
+warnings.warn('Using OFS.content_types is deprecated (will be removed in Zope '
+              '2.11). Instead use zope.app.content_types.', 
+              DeprecationWarning,
+              stacklevel=2) 
+
 from zope.app.content_types import text_type, guess_content_type, add_files
