@@ -26,6 +26,9 @@ Zope Changes
 
     Features added
 
+      - deprecated OFS.content_types (to be removed in Zope 2.11) and
+        replaced all occurences with zope.app.content_types 
+
       - OFS.content_types: moved code to zope.app.content_types and added
         method aliases
 
